--- a/.env.dummy
+++ b/.env.dummy
@@ -9,3 +9,36 @@ DB_HOST=name_host
 DB_PORT=some_port
 DB_USER=someUser
 DB_PASSWORD=somePassword
+
+#---------------------------------------------------------
+JUPYTERHUB_VERSION=5.1.0
+JUPYTERHUB_PORT=8111
+DOCKER_JUPYTER_IMAGE=my-datascience-singleuser:5.1.0
+
+JUPYTERHUB_NETWORK=hub-backend
+
+
+POSTGRES_DB=jupyterhub
+POSTGRES_USER=jupyteruser
+POSTGRES_PASSWORD=userpassword
+DB_HOST=postgres
+DB_PORT=5432
+
+JUPYTERHUB_AUTO_APPROVE=false 
+
+JUPYTERHUB_ADMIN_USERS=admin,techmanager
+JUPYTERHUB_ALLOWED_USERS=admin,techmanager
+
+JUPYTERHUB_SUBADMIN_USERS=techmanager
+
+USERS_FILE=/srv/jupyterhub/users.json
+USERSYNC_INTERVAL=10
+USERSYNC_PRUNE=false
+JUPYTERHUB_OPEN_SIGNUP=false
+
+
+EDIT_LOGIN_PASSWORD=pas12345
+EDIT_TARGET_URL=/hub/static/edit/editUser.html
+
+
+
