--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,12 +16,12 @@ services:
       context: .
       dockerfile: Dockerfile  #dockerfile for JupyterHub
       args:
-        JUPYTERHUB_VERSION: "${JUPYTERHUB_VERSION:-5.1.0}"
+        JUPYTERHUB_VERSION: "${JUPYTERHUB_VERSION:-5.1.0}" 
     restart: unless-stopped
     ports:
-      - "${JUPYTERHUB_PORT:-8111}:8000"
+      - "${JUPYTERHUB_PORT:-8111}:8000"  # Map host port (env-driven) to container’s Hub port
     env_file:
-      - .env
+      - .env  # Centralize configuration in .env
     environment:
       - DOCKER_JUPYTER_IMAGE=${DOCKER_JUPYTER_IMAGE}
       - JUPYTERHUB_NETWORK=${JUPYTERHUB_NETWORK}
@@ -38,14 +38,14 @@ services:
       - EDIT_LOGIN_PASSWORD=${EDIT_LOGIN_PASSWORD}
       - EDIT_TARGET_URL=${EDIT_TARGET_URL}      
     volumes:
-      - ./jupyterhub_config:/srv/jupyterhub
-      - /var/run/docker.sock:/var/run/docker.sock
+      - ./jupyterhub_config:/srv/jupyterhub   # Mount configs and custom Python scripts
+      - /var/run/docker.sock:/var/run/docker.sock  # DockerSpawner needs access to host Docker
       - jhub-secret:/srv/jupyterhub/secret
-      - ./static_edit:/usr/local/share/jupyterhub/static/edit:rw    
+      - ./static_edit:/usr/local/share/jupyterhub/static/edit:rw   # Mount custom editor assets 
     networks:
       - hub-public
-      - hub-backend
-    healthcheck:
+      - hub-backend   # Internal-only network; isolates DB and Hub
+    healthcheck:  # Fail container if Hub is unhealthy
       test: ["CMD-SHELL", "python3 -c \"import urllib.request,sys; sys.exit(0 if urllib.request.urlopen('http://localhost:8000/hub/health').getcode()==200 else 1)\""]      
       interval: 30s
       timeout: 5s
@@ -54,7 +54,7 @@ services:
       singleuser-image:
         condition: service_completed_successfully  # wait to build singleuser image
       postgres:
-          condition: service_healthy
+          condition: service_healthy  # Wait for DB health before starting Hub
     command: >
       bash -lc "/usr/local/bin/gen-edit-config.sh
       && jupyterhub -f /srv/jupyterhub/jupyterhub_config.py"    
@@ -78,7 +78,7 @@ services:
       test: ["CMD-SHELL", "pg_isready -U \"$POSTGRES_USER\" -d \"$POSTGRES_DB\" -h localhost"]
       interval: 5s
       timeout: 5s
-      retries: 10
+      retries: 10    # Ensures DB is really up before Hub starts
 
 networks:
   hub-public: 
