nbGitpuller from GitHub as Public mit DataSets in Image only read

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@ jupyterhub_config/jupyterhub-proxy.pid
 jupyterhub_config/users.json
 jupyterhub_config/.signup_bootstrap_done
 static_edit/config.js
+datasets_seed/*
+!datasets_seed/.gitkeep
