--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,3 @@
-
 services:
   
   # --- build image single-user and exit ---
@@ -7,9 +6,14 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.singleuser
+    environment:
+      - NB_USER=${NB_USER}
+      - NB_UID=${NB_UID}
+      - NB_GID=${NB_GID}
     command: ["/bin/true"]
     restart: "no"
     pull_policy: build   # avoid warning of "pull access denied"
+
 
   jupyterhub:
     build:
@@ -19,7 +23,7 @@ services:
         JUPYTERHUB_VERSION: "${JUPYTERHUB_VERSION:-5.1.0}" 
     restart: unless-stopped
     ports:
-      - "${JUPYTERHUB_PORT:-8111}:8000"  # Map host port (env-driven) to container’s Hub port
+      - "${JUPYTERHUB_PORT}:8000"  # Map host port (env-driven) to container’s Hub port
     env_file:
       - .env  # Centralize configuration in .env
     environment:
@@ -31,17 +35,34 @@ services:
       - POSTGRES_USER=${POSTGRES_USER}
       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - JUPYTERHUB_OPEN_SIGNUP=${JUPYTERHUB_OPEN_SIGNUP}
-      - JUPYTERHUB_AUTO_APPROVE=${JUPYTERHUB_AUTO_APPROVE}
       - JUPYTERHUB_ADMIN_USERS=${JUPYTERHUB_ADMIN_USERS}
       - JUPYTERHUB_SUBADMIN_USERS=${JUPYTERHUB_SUBADMIN_USERS}
-      - PYTHONPATH=/srv/jupyterhub
+      - JUPYTERHUB_SIGNUP_BOOTSTRAP_FLAG=${JUPYTERHUB_SIGNUP_BOOTSTRAP_FLAG}
+
+      - PYTHONPATH=${PYTHONPATH}
       - EDIT_LOGIN_PASSWORD=${EDIT_LOGIN_PASSWORD}
-      - EDIT_TARGET_URL=${EDIT_TARGET_URL}      
+      - EDIT_TARGET_URL=${EDIT_TARGET_URL}
+      - USERS_FILE=${USERS_FILE}
+      - USERSYNC_INTERVAL=${USERSYNC_INTERVAL}
+      - USERSYNC_PRUNE=${USERSYNC_PRUNE}
+
+      - COURSE_DIR=${COURSE_DIR}
+      - NBGITPULLER_REPO=${NBGITPULLER_REPO}
+      - NBGITPULLER_BRANCH=${NBGITPULLER_BRANCH}
+      - NBGITPULLER_TARGET=${NBGITPULLER_TARGET}
+      - RUNNER_ENABLED=${RUNNER_ENABLED}
+      - RUNNER_WATCH_DIR=${RUNNER_WATCH_DIR}
+      - RUNNER_CONFIG=${RUNNER_CONFIG}
+      - RUNNER_OUTDIR=${RUNNER_OUTDIR}
+      - DATASETS_DIR=${DATASETS_DIR}
+      - DATASETS_VOLUME=${DATASETS_VOLUME}
+      - DATASETS_MOUNT_PATH=${DATASETS_MOUNT_PATH}      
     volumes:
-      - ./jupyterhub_config:/srv/jupyterhub   # Mount configs and custom Python scripts
+      - ./jupyterhub_config:/srv/jupyterhub  # Mount configs and custom Python scripts
       - /var/run/docker.sock:/var/run/docker.sock  # DockerSpawner needs access to host Docker
       - jhub-secret:/srv/jupyterhub/secret
       - ./static_edit:/usr/local/share/jupyterhub/static/edit:rw   # Mount custom editor assets 
+      - datasets-vol:/shared/data:ro
     networks:
       - hub-public
       - hub-backend   # Internal-only network; isolates DB and Hub
@@ -55,11 +76,13 @@ services:
         condition: service_completed_successfully  # wait to build singleuser image
       postgres:
           condition: service_healthy  # Wait for DB health before starting Hub
+      datasets-init:
+        condition: service_completed_successfully  # ensure datasets volume is initialized
     command: >
       bash -lc "/usr/local/bin/gen-edit-config.sh
       && jupyterhub -f /srv/jupyterhub/jupyterhub_config.py"    
   postgres:
-    image: postgres:13
+    image: postgres:16
     container_name: jupyterhub-postgres
     restart: unless-stopped
     expose:
@@ -80,12 +103,34 @@ services:
       timeout: 5s
       retries: 10    # Ensures DB is really up before Hub starts
 
+  datasets-init:
+    image: alpine:3.20 #minimal image
+    volumes:
+      - ./datasets_seed:/seed:ro 
+      - datasets-vol:/data
+
+    command: >
+      /bin/sh -c 'set -eu;
+      mkdir -p /data;
+      if [ -d /seed ] && [ "$(ls -A /seed 2>/dev/null || true)" ]; then
+        tar -C /seed -cf - . | tar -C /data -xpf -;
+        echo "Seed copied to /data";
+      else
+        echo "No files in /seed; nothing to copy";
+      fi;
+      exit 0'
+    restart: "no" # stop container     
+
 networks:
   hub-public: 
-    name: hub-public
+    name: ${JUPYTERHUB_EXT_NETWORK}
+    driver: bridge
   hub-backend:
-    name: hub-backend
-    internal: true
+    name: ${JUPYTERHUB_NETWORK}
+    driver: bridge
+    attachable: true
 volumes:
   postgres-data:
   jhub-secret:
+  datasets-vol:
+    name: jupyter_hub_test_datasets-vol
