--- a/.env.dummy
+++ b/.env.dummy
@@ -1,44 +1,72 @@
-# Copy this file to .env and edit it to your needs
+# =============================================================================
+# JUPYTERHUB KONFIGURATION
+# =============================================================================
 
-JUPYTERHUB_PORT=port_number
-DOCKER_JUPYTER_IMAGE=image_docker
-JUPYTERHUB_NETWORK=jupyterhub-network
+# --- Grundlegende JupyterHub-Einstellungen ---
+JUPYTERHUB_VERSION=5.1.0                     # Festgelegte Hub-Version, um unerwartete Änderungen zu vermeiden
+JUPYTERHUB_PORT=8111                         # Port, an dem der Hub öffentlich zugänglich ist
+PYTHONPATH=/srv/jupyterhub                   # Python-Pfad für JupyterHub
 
-DB_NAME=name_database
-DB_HOST=name_host
-DB_PORT=some_port
-DB_USER=someUser
-DB_PASSWORD=somePassword
+# --- Docker-Konfiguration ---
+DOCKER_JUPYTER_IMAGE=my-datascience-singleuser:5.1.0  # Standard Single-User Notebook Image für DockerSpawner
+JUPYTERHUB_EXT_NETWORK=hub-public                     # Vorher erstelltes Docker-Netzwerk für öffentlichen Hub-Zugriff
+JUPYTERHUB_NETWORK=hub-backend                        # Internes Docker-Netzwerk für Spawner und Services
 
-#---------------------------------------------------------
-JUPYTERHUB_VERSION=5.1.0
-JUPYTERHUB_PORT=8111
-DOCKER_JUPYTER_IMAGE=my-datascience-singleuser:5.1.0
+# --- Datenbank-Konfiguration ---
+POSTGRES_DB=jupyterhub                       # Datenbankname für Hub-Status
+POSTGRES_USER=jupyteruser                    # Datenbankbenutzer für Hub-Verbindungen
+POSTGRES_PASSWORD=userpassword               # Passwort für den DB-Benutzer
+DB_HOST=postgres                             # Hostname des PostgreSQL-Dienstes
+DB_PORT=5432                                 # PostgreSQL-Port im internen Netzwerk
 
-JUPYTERHUB_NETWORK=hub-backend
+# --- Benutzerverwaltung ---
+JUPYTERHUB_AUTO_APPROVE=false                # Automatische Genehmigung von Anmeldungen deaktiviert
+JUPYTERHUB_ADMIN_USERS=admin,techmanager     # Administratoren mit vollen Hub-Rechten
+JUPYTERHUB_ALLOWED_USERS=admin,techmanager   # Beschränkung der Anmeldung auf diese E-Mails (plus Tools-Ergänzungen)
+JUPYTERHUB_SUBADMIN_USERS=techmanager        # Benutzer mit "user-admin"-Rolle (ohne volle Admin-Rechte)
 
+# --- Benutzersynchronisierung ---
+USERS_FILE=/srv/jupyterhub/users.json        # Pfad für externe Benutzer/Gruppen
+USERSYNC_INTERVAL=10                         # Sekunden zwischen Prüfungen auf users.json-Änderungen
+USERSYNC_PRUNE=false                         # Benutzer, die nicht in users.json sind, nicht bei Sync entfernen
 
-POSTGRES_DB=jupyterhub
-POSTGRES_USER=jupyteruser
-POSTGRES_PASSWORD=userpassword
-DB_HOST=postgres
-DB_PORT=5432
+# --- Anmeldung und Registrierung ---
+JUPYTERHUB_SIGNUP_BOOTSTRAP_FLAG=/srv/jupyterhub/.signup_bootstrap_done
+JUPYTERHUB_OPEN_SIGNUP=false                 # Öffentliche Registrierung geschlossen (außer beim ersten Start)
+EDIT_LOGIN_PASSWORD=pas12345                 # Client-seitiges Passwort für den statischen Editor-Zugang
+EDIT_TARGET_URL=/hub/static/edit/editUser.html  # Zielseite für JSON-Editor nach Client-Login
 
-JUPYTERHUB_AUTO_APPROVE=false 
+# =============================================================================
+# INHALTE UND KURSE
+# =============================================================================
 
-JUPYTERHUB_ADMIN_USERS=admin,techmanager
-JUPYTERHUB_ALLOWED_USERS=admin,techmanager
+# --- New York Taxi Beispiel ---
+COURSE_DIR=/home/jovyan/work/folder     # Verzeichnis für den Kurs
 
-JUPYTERHUB_SUBADMIN_USERS=techmanager
+# --- Git-Integration ---
+NBGITPULLER_REPO=https://github.com/your/repository
+NBGITPULLER_BRANCH=main
+NBGITPULLER_TARGET=workbooks
 
-USERS_FILE=/srv/jupyterhub/users.json
-USERSYNC_INTERVAL=10
-USERSYNC_PRUNE=false
-JUPYTERHUB_OPEN_SIGNUP=false
+# --- Benutzereinstellungen ---
+NB_USER=jovyan                               # Standard-Benutzername
+NB_UID=1000                                  # Benutzer-ID
+NB_GID=100                                   # Gruppen-ID
 
+# =============================================================================
+# RUNNER-KONFIGURATION
+# =============================================================================
 
-EDIT_LOGIN_PASSWORD=pas12345
-EDIT_TARGET_URL=/hub/static/edit/editUser.html
+RUNNER_ENABLED=1                             # Runner aktiviert (1=ja, 0=nein)
+RUNNER_WATCH_DIR=${COURSE_DIR}               # Zu überwachendes Verzeichnis
+RUNNER_CONFIG=${COURSE_DIR}/runner.yml       # Konfigurationsdatei für den Runner
+RUNNER_OUTDIR=/home/jovyan/work/.runner      # Ausgabeverzeichnis des Runners
+RUNNER_TEMPLATE=python                       # Template-Typ für den Runner
 
+# =============================================================================
+# DATASETS-KONFIGURATION
+# =============================================================================
 
-
+DATASETS_DIR=/shared/data                    # Verzeichnis für Datasets
+DATASETS_VOLUME=jupyter_hub_test_datasets-vol # Name des Docker-Volumes für Datasets
+DATASETS_MOUNT_PATH=/shared/data             # Mountpunkt für Datasets im Container
